@@ -165,6 +165,9 @@ public class DashboardController {
 			reportType = report.getReportType();
 			model.addAttribute("reportType", reportType);
 
+			request.setAttribute("refreshPeriodSeconds", report.getGeneralOptions().getRefreshPeriodSeconds());
+			request.setAttribute("httpMethod", request.getMethod());
+
 			ParameterProcessor paramProcessor = new ParameterProcessor();
 			paramProcessor.setSuppliedReport(report);
 			paramProcessor.setIsFragment(true);
@@ -177,6 +180,8 @@ public class DashboardController {
 			if (reportOptions.isShowSelectedParameters()) {
 				request.setAttribute("reportParamEntries", reportParamsMap);
 			}
+			
+			RunReportHelper runReportHelper = new RunReportHelper();
 
 			if (reportFormat == ReportFormat.pdf) {
 				FilenameHelper filenameHelper = new FilenameHelper();
@@ -190,8 +195,6 @@ public class DashboardController {
 
 				request.setAttribute("reportFormat", "pdf");
 				request.setAttribute("fileName", fileName);
-
-				RunReportHelper runReportHelper = new RunReportHelper();
 
 				String shortDescription = report.getLocalizedShortDescription(locale);
 				shortDescription = runReportHelper.performDirectParameterSubstitution(shortDescription, reportParamsMap);
@@ -215,7 +218,6 @@ public class DashboardController {
 						request.setAttribute("ajax", true);
 					}
 
-					RunReportHelper runReportHelper = new RunReportHelper();
 					request.setAttribute("requestParameters", runReportHelper.getRequestParametersString(request));
 
 					String options = report.getOptions();
@@ -233,6 +235,12 @@ public class DashboardController {
 						}
 					}
 				}
+			}
+
+			boolean allowSelectParameters = BooleanUtils.toBoolean(request.getParameter("allowSelectParameters"));
+			if (allowSelectParameters) {
+				request.setAttribute("allowSelectParameters", allowSelectParameters);
+				runReportHelper.setSelectReportParameterAttributes(report, request, session, locale);
 			}
 
 			String reportName = report.getLocalizedName(locale);
@@ -495,7 +503,7 @@ public class DashboardController {
 			if (refreshPeriodSeconds != PORTLET_NO_REFRESH_SETTING
 					&& refreshPeriodSeconds < MINIMUM_REFRESH_SECONDS) {
 				throw new IllegalArgumentException("Refresh setting less than minimum. Setting="
-						+ refreshPeriodSeconds + ", Minimum=5");
+						+ refreshPeriodSeconds + ", Minimum=" + MINIMUM_REFRESH_SECONDS);
 			}
 		}
 
